# G4Simulation_a2

./: .gitignore  CMakeLists.txt  README.md  compile.sh  run.sh
analysis/: plot.cc  plot_naiE.cc
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  PsEventInfo.hh  PsEventInfo.hh.save  PsTrackInfo.hh  RunAction.hh  StackingAction.hh  SteppingAction.hh  TrackingAction.hh
macros/: batch.mac  batch_000.mac  batch_100.mac  batch_mode1.mac  batch_mode2.mac  batch_mode3.mac  run_p2_000.mac  run_p2_030.mac  run_p2_050.mac  run_p2_070.mac  sweep_one.mac  sweep_silicaZ.mac  vis.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc  TrackingAction.cc  main.cc
